fix(security): 保留审计快照合法空值